# terraform-provider-pgmold

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs  provider.rs  util.rs
src/resources/: migration.rs  mod.rs  schema.rs
tests/: integration.rs
