[package]
name = "terraform-provider-pgmold"
version = "0.1.0"
edition = "2021"
description = "Terraform provider for pgmold PostgreSQL schema management"
license = "MIT"
repository = "https://github.com/fmguerreiro/terraform-provider-pgmold"
keywords = ["terraform", "postgresql", "schema", "migration", "database"]
categories = ["development-tools", "database"]

[[bin]]
name = "terraform-provider-pgmold"
path = "src/main.rs"

[dependencies]
tf-provider = "0.2"
pgmold = "0.14"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
chrono = "0.4"
regex = "1"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tempfile = "3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
